[package]
name = "rosetta-aisp-llm"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["epiphytic"]
description = "LLM fallback for AISP conversion using Claude SDK - extends rosetta-aisp with AI-powered conversion"
license = "MIT"
repository = "https://github.com/epiphytic/rosetta-aisp-llm"
documentation = "https://docs.rs/rosetta-aisp-llm"
readme = "README.md"
keywords = ["aisp", "llm", "claude", "conversion", "ai"]
categories = ["text-processing", "development-tools"]

[lib]
name = "rosetta_aisp_llm"
path = "src/lib.rs"

[[bin]]
name = "rosetta"
path = "src/bin/rosetta.rs"

[dependencies]
# AISP conversion
rosetta-aisp = "0.2"

# Claude SDK for LLM fallback
claude-agent-sdk-rs = "0.6"

# Async runtime
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }

# Error handling
anyhow = "1.0"

# Lazy initialization for cached prompts
once_cell = "1.19"

# CLI
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# No additional dev dependencies needed - tokio is already a regular dependency
